Fixing videos UI duration spacing

--- a/client/components/videos-ui/style.scss
+++ b/client/components/videos-ui/style.scss
@@ -152,6 +152,7 @@
 					color: rgba( 255, 255, 255, 0.5 );
 					display: inline-block;
 					flex-basis: 34px;
+					margin-right: 10px;
 				}
 
 				.videos-ui__completed-checkmark {
